position controls bar at the bottom fixed on small screens

--- a/app/assets/stylesheets/_bits.css.scss
+++ b/app/assets/stylesheets/_bits.css.scss
@@ -11,7 +11,7 @@ $dark_gray: #b3b3b3;
 $darker_gray: darken($dark_gray, 10%);
 $black: black;
 $white: white;
-$blue: rgb(36, 67, 147);
+$blue: rgb(37, 67, 147);
 $red: lighten(desaturate(red, 20%), 20%);
 $yellow: #ffe533;
 
