--- a/app/assets/stylesheets/_footer.css.scss
+++ b/app/assets/stylesheets/_footer.css.scss
@@ -9,6 +9,10 @@ footer.main-footer {
   margin-top: $space*2;
   padding-top: $space/2;
 
+  @include medium {
+    margin-bottom: 100px;
+  }
+
   &, a {
     color: $footer_color;
   }
