--- a/app/assets/stylesheets/_study.css.scss
+++ b/app/assets/stylesheets/_study.css.scss
@@ -2,9 +2,6 @@
 
 .studies__list {
   @include border_list;
-  @include small {
-    padding-top: $space;
-  }
 
   a {
     color: inherit;
